--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@jest/globals": "^29.4.1",
     "@types/express": "^4.17.16",
     "@types/jest": "^29.4.0",
     "jest": "^29.4.1",
@@ -26,6 +27,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "express": "4.18.2"
+    "express": "4.18.2",
+    "mongodb": "^4.13.0"
   }
 }
