--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@jest/globals": "^29.4.1",
     "@types/express": "^4.17.16",
     "@types/jest": "^29.4.0",
+    "babel-jest": "^29.4.1",
     "jest": "^29.4.1",
     "ts-node-dev": "^2.0.0",
     "ts-standard": "^12.0.2",
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "4.18.2",
     "mongodb": "^4.13.0"
   }
