--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
-    "test": "jest --verbose",
+    "test": "jest --verbose --silent=false --runInBand --detectOpenHandles --forceExit",
+    "cov": "jest --verbose --silent=false --runInBand --detectOpenHandles --forceExit --coverage",
     "lint": "ts-standard src/**/*.ts"
   },
   "eslintConfig": {
@@ -18,11 +19,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-typescript": "^7.18.6",
     "@jest/globals": "^29.4.1",
     "@types/express": "^4.17.16",
     "@types/jest": "^29.4.0",
     "babel-jest": "^29.4.1",
     "jest": "^29.4.1",
+    "ts-jest": "^29.0.5",
     "ts-node-dev": "^2.0.0",
     "ts-standard": "^12.0.2",
     "typescript": "^4.9.4"
@@ -31,5 +34,9 @@
     "dotenv": "^16.0.3",
     "express": "4.18.2",
     "mongodb": "^4.13.0"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node"
   }
 }
