--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,4 +27,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-    - run: npm run test
+    - run: curl -Os https://uploader.codecov.io/latest/linux/codecov; chmod +x codecov; ./codecov
+    - run: npm run cov
