--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,5 +27,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-    - run: curl -Os https://uploader.codecov.io/latest/linux/codecov; chmod +x codecov; ./codecov
     - run: npm run cov
+    - run: curl -Os https://uploader.codecov.io/latest/linux/codecov; chmod +x codecov; ./codecov -t ${{ secrets.CODECOV_TOKEN }}
