--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
+    "devv": "./node_modules/.bin/netlify-lambda build src",
+    "start": "./node_modules/.bin/netlify-lambda serve src",
     "test": "jest --verbose --silent=false --runInBand --detectOpenHandles --forceExit",
     "cov": "jest --verbose --silent=false --runInBand --detectOpenHandles --forceExit --coverage",
     "lint": "ts-standard src/**/*.ts"
@@ -33,7 +35,9 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "4.18.2",
-    "mongodb": "^4.13.0"
+    "mongodb": "^4.13.0",
+    "netlify-lambda": "^2.0.15",
+    "serverless-http": "^3.1.1"
   },
   "jest": {
     "preset": "ts-jest",
