--- a/package.json
+++ b/package.json
@@ -23,15 +23,22 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/preset-typescript": "^7.18.6",
+    "@eslint/js": "^9.36.0",
     "@jest/globals": "^29.4.1",
     "@types/express": "^4.17.16",
     "@types/jest": "^29.4.0",
+    "@types/supertest": "^2.0.12",
     "babel-jest": "^29.4.1",
+    "eslint": "^8.57.1",
+    "globals": "^16.4.0",
     "jest": "^29.4.1",
+    "jiti": "^2.6.0",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
     "ts-node-dev": "^2.0.0",
     "ts-standard": "^12.0.2",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "typescript-eslint": "^8.44.1"
   },
   "dependencies": {
     "@types/better-sqlite3": "^7.6.13",
@@ -43,6 +50,18 @@
   },
   "jest": {
     "preset": "ts-jest",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "transform": {
+      "^.+\\.ts$": "ts-jest"
+    },
+    "testMatch": [
+      "**/tests/**/*.test.ts"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.ts",
+      "!src/**/*.d.ts",
+      "!src/db/saints.ts",
+      "!src/db/phrases.ts"
+    ]
   }
 }
